Revert "refactor jni hooks"
This reverts commit ac53ef11a353176ed902df71d608e437f8895bdf.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "loader/src/external/_xDL"]
 	path = loader/src/external/_xDL
 	url = https://github.com/hexhacking/xDL.git
+[submodule "loader/src/external/parallel-hashmap"]
+	path = loader/src/external/parallel-hashmap
+	url = https://github.com/greg7mdp/parallel-hashmap
